# Context-Free-Grammar-to-Chomsky-Normal-Form

./: .gitignore  LICENSE  README.md  algorithmsInCSharpNotes.cs  algoritmy.cs  flp-fun-xzemek04.cabal  output  stack.yaml  test.ps1  test.txt  testBat.bat
.stack-work/install/65995373/flag-cache/: ansi-terminal-0.6.2.3-Az560Cs0ObY6ZODYjxtBiR  ansi-wl-pprint-0.6.7.3-DiRD02X4Bp4CayfqPjYmEo  flp-fun-xzemek04-0.1.0.0-9Q1UQOs9ymTFXNm6FaDBb8  flp-fun-xzemek04-0.1.0.0-FpSIZxxNtcn4P8YM06k4YV  monads-tf-0.1.0.3-JIPNoZ6aJW379YQZJvMYoR  options-1.2.1.1-CYYVjt6pZJjHt5Dc1YU4Af  optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/flp-fun-xzemek04-0.1.0.0-9Q1UQOs9ymTFXNm6FaDBb8/: Lib.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/flp-fun-xzemek04-0.1.0.0-E4Ke6MkZOuaDYHLmwBWyZh/: Lib.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/flp-fun-xzemek04-0.1.0.0-FpSIZxxNtcn4P8YM06k4YV/: Lib.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL/Options/: Applicative.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL/Options/Applicative/: Arrows.hi  BashCompletion.hi  Builder.hi  Common.hi  Extra.hi  Help.hi  Internal.hi  Types.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL/Options/Applicative/Builder/: Completer.hi  Internal.hi
.stack-work/install/65995373/lib/x86_64-windows-ghc-8.0.2/optparse-applicative-0.13.2.0-SWjmfay0WD4jZNxwNzmOL/Options/Applicative/Help/: Chunk.hi  Core.hi  Pretty.hi  Types.hi
.stack-work/install/65995373/pkgdb/: flp-fun-xzemek04-0.1.0.0-FpSIZxxNtcn4P8YM06k4YV.conf  package.cache
app/: Main.hs
resources/: stdout_-1_test.txt  stdout_-2_test.txt  study-text-example.txt  test.txt
src/: CFGAlgorithms.hs  Lib.hs
src/Parser/: CFGParser.hs  OptionsParser.hs
src/Type/: CFGParser.hs  OptionsParser.hs  OptionsParserType.hs
test/: Spec.hs
