name:                flp-fun-xzemek04
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/flp-fun-xzemek04#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Zemek
maintainer:          xzemek04@stud.fit.vutbr.cz
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , optparse-applicative
  default-language:    Haskell2010

executable flp-fun-xzemek04-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , containers
                     , flp-fun-xzemek04
  default-language:    Haskell2010

test-suite flp-fun-xzemek04-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , optparse-applicative
                     , containers
                     , flp-fun-xzemek04
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/flp-fun-xzemek04
