name:                flp-fun-xzemek04
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarTiXcz/flp-fun-xzemek04#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Zemek
maintainer:          zemek.m@gmail.com
copyright:           2017 Martin Zemek
category:            Grammar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser.OptionsParser
                     , Parser.CFGParser
                     , Type.OptionsParser
                     , Type.CFGParser
                     , CFGAlgorithms
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , optparse-applicative
  default-language:    Haskell2010

executable flp-fun-xzemek04-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , flp-fun-xzemek04
                     , parsec
  default-language:    Haskell2010

test-suite flp-fun-xzemek04-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , optparse-applicative
                     , parsec
                     , flp-fun-xzemek04
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
